--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/jetstream": "^2.5",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.5"
+        "livewire/livewire": "^2.5",
+        "rtconner/laravel-likeable": "^3.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
