--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "danharrin/livewire-rate-limiting": "^0.3.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/jetstream": "^2.5",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.5",
-        "rtconner/laravel-likeable": "^3.2"
+        "livewire/livewire": "^2.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
