Add Resize/Compress  Image

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "danharrin/livewire-rate-limiting": "^0.3.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "intervention/image": "^2.7",
         "laravel/framework": "^8.75",
         "laravel/jetstream": "^2.5",
         "laravel/sanctum": "^2.11",
